2020-11-21

        * Version 2.0.0 released
        ========================

        Add GModels::eval() vector evaluation method (#3455)
        Fix GSkyMap::stack_maps() method for WCS maps
        Add GCTAModelSkyCube class (#3442)
        Add GSkyModel flux() and eflux() methods (#3439)
        Add XML value constructors and access methods to GXmlElement class (#3431)
        Correct application elapsed CPU time for OpenMP (#3417) 
        Implement sparse vector response cache (#3403)
        Implement GMatrixSparse::row() and GMatrixSparse::add_to_row() methods
        Integrate analytical gradients for energy dispersion computation (#3333)
        Add GFunctions abstract base class (#3328)
        Add GIntegrals class (#3328)
        Remove implicit conversion warnings (#3324)
        Add gammalib::tmpnam() function (#3324)
        Add GSkyDirs container class (#3324)
        Implement vectorised response computation (#3203)
        Implement analytical gradients for the radial Gaussian model in a
          stacked analysis (#3203)
        Add GSkyModel flux_error() and eflux_error() methods (#3074)
        Implement pre-computation cache in GModelSpatialGauss (#1300)


2020-10-15

        * Bug fix version 1.7.2 released
        ================================

        Fix copy of base class members in copy constructor of some
          spatial models (#3402)


2020-09-07

        * Bug fix version 1.7.1 released
        ================================

        Add Python include path in search for Python.h (#3329)
        Test for Big Sur in configuration step (#3326)
        Copy Python modules into pyext/gammalib folder (#3322)
        Write units of response cubes into FITS files (#3321)
        Implement specific response cache for CTA stacked analysis (#3316)
        Speed up model definition XML file writing (#3308)
        Fix automatic type casting in Python interface (#3295)
        Make parameter file reading and writing thread safe (#3287)